tests/fail/unwrap_move.stderr
error[E0438]: Use of moved value: 'r'
 --> tests/fail/unwrap_move.tk:9:14
  |
 9 |     auto z = r
  |              ^
error[E0438]: Use of moved value: 'r'
 --> tests/fail/unwrap_move.tk:9:14
  |
 9 |     auto z = r
  |              ^
